--- a/index.html
+++ b/index.html
@@ -3,23 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-Do-list</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
-     <link rel="stylesheet" href="style.css">
+    <title>My To Do List</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="my-app">
-    <header class="header">
-        <h1> My To Do List</h1>
-    </header>
-    <div class="my-form">
-        <form action="">
-            <input type="text" placeholder="add new to do..">
-            <button type="submit" >Add</button>
+    <div class="todo-container">
+        <h1>My To Do List</h1>
+        <form id="task-form">
+            <input type="text" id="task-input" placeholder="Add a new to do..." required>
+            <button type="submit" class="add-btn">Add</button>
         </form>
+
+        <ul id="task-list"></ul> <!-- Tasks will show here -->
     </div>
-    
+
     <script src="script.js"></script>
-    </section>
 </body>
 </html>
